# SpringAngles

./: CMakeLists.txt  CadGraphicsView.cpp  CadGraphicsView.hpp  Document.cpp  Document.hpp  Geometry.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  PointCoordsDlg.cpp  PointCoordsDlg.hpp  PointCoordsDlg.ui  README.md  SpringNet.cpp  SpringNet.hpp  SpringParamsDlg.cpp  SpringParamsDlg.hpp  SpringParamsDlg.ui
